# ai-langchain

./: 01-1.py  01-2.py  01-3.py  01-5.py  02-2.py  02-4.py  02-5.py  02-6.py  02-7.py  03-1.py  03-2.py  03-4.py  03-6.py  04-1.py  05-1.py  06-1.py  models.py  pyproject.toml  query_result_04-1.md  rag_graph.py  rag_pipeline.py  schemas.py
Backend/: main.py  main_graph.py
Days/: 01-3.py  01-4.py  01-5.py  01-6.py  01-7.py  01-8.py  02-1.py  02-3.py  03-2.py  03-3.py  03-7.py  05-1.py  06-1.py
Frontend/: app.py
chroma_company_docs/: chroma.sqlite3
sample_docs/: company_policy.txt  job_posting.txt
